<resources>
    <string name="app_name">Fulfil Clone</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_id">"User ID"</string>
    <string name="user_type">User Type</string>
    <string name="get_data">Get Data</string>
    <string name="log_in">Log in</string>
    <string name="email_input">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo">Logo</string>
    <string name="error">Error</string>
    <string name="invalid_credentials">Invalid Credentials!!</string>
    <string name="company_id">"Company Id"</string>
    <string name="role_name">Role name</string>
    <string name="welcome">WELCOME</string>
    <string name="log_out">Log out</string>
    <string name="remember_me">Remember me</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="mobile">Mobile</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="request_host">Request Host</string>
    <string name="user_image">User Image</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_home">Welcome Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert</string>
    <string name="no_record_found">No Record Found</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="under_approval">Under Approval</string>
    <string name="pending">Pending</string>
    <string name="credit_request_no">Credit Request No.:</string>
    <string name="season_code">Season Code:</string>
    <string name="customer_code">Customer Code:</string>
    <string name="created_on">Created On:</string>
    <string name="add">Add</string>
    <string name="child_title">Child Title</string>
    <string name="select_season">Select Season</string>
    <string name="add_credit_limit">Add Credit Limit</string>
    <string name="select_customer">Select Customer</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="credit_limit_view">Credit Limit View</string>
    <string name="line_detail_s">Line Detail\'s</string>
    <string name="add_line">Add Line</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="select_category">Select Category</string>
    <string name="select_group_code">Select Group Code</string>
    <string name="expected_amount">Expected Amount</string>
    <string name="expected_collection_amount">Expected Collection Amount</string>
    <string name="expected_collection_date">Expected Collection Date</string>
    <string name="category_code">Category Code :</string>
    <string name="group_code">Group Code :</string>
    <string name="expected_amount_">Expected Amount :</string>
    <string name="expected_date">Expected Date :</string>
</resources>