<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/homeBtn"
    android:title="@string/home"
    app:showAsAction="ifRoom"
    android:icon="@drawable/baseline_home_24"
    />
    <item android:id="@+id/menuBtn"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/menu"
        app:showAsAction="ifRoom"
        />
    <item android:title="@string/notification"
        android:id="@+id/notificationBtn"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_notifications_active_24"
        />
    <item android:id="@+id/profileBtn"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_person_24"
        />
</menu>