<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditLimit.CreditLimitView">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="3dp"
            >
            <ImageView
                android:id="@+id/childContainerBackBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                android:padding="5dp"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/childTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/credit_limit_view"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/completeBtn"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:backgroundTint="#11610B"
            android:elevation="2dp"
            android:textSize="14sp"
            />

    </LinearLayout>
<LinearLayout
    android:id="@+id/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginHorizontal="5dp"
        android:padding="5dp"
        android:elevation="3dp"
        android:background="@color/white"
        android:layout_marginVertical="10dp"
        >

        <!-- Row 1 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_request_no"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/creditRequestNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 2 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_code"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/seasonCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 3 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_code"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/customerCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 4 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_on"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/createdOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="4dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/line_detail_s"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/deleteLineBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#AC1414"
            app:layout_constraintEnd_toStartOf="@id/addLineBtn"
            android:text="@string/delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="3dp"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/addLineBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_line"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="3dp"
            android:textSize="14sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lineRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/line_item"
        android:padding="5dp"
        />
</LinearLayout>

    <FrameLayout
        android:id="@+id/addLineFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>