<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:layout_height="match_parent"
    tools:context=".CreditLimitEnhancement">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="3dp"
            >
            <ImageView
                android:id="@+id/childContainerBackBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                android:padding="5dp"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/childTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/child_title"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />
<Button
    android:id="@+id/addBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add"
    android:backgroundTint="#11610B"
    android:elevation="2dp"
    android:textSize="14sp"
    />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_horizontal"
    android:scrollbars="none"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:background="#9F878585"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/pendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/txt_btn"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_navigate_next_24"
            />

        <TextView
            android:id="@+id/underApprvalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/under_approval"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_navigate_next_24"
            />

        <TextView
            android:id="@+id/approvedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approved"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_navigate_next_24"
            />

        <TextView
            android:id="@+id/rejectedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejected"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/dark_green"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true"
        />
    </LinearLayout>
</HorizontalScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:backgroundTint="@color/dark_green"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        tools:listitem="@layout/credit_item"
        />
    <FrameLayout
        android:id="@+id/addFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>