<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="5dp"
        >

        <!-- Row 1 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_request_no"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/creditRequestNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 2 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_code"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/seasonCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 3 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_code"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/customerCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 4 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_on"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/createdOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

    </TableLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/black"
    android:layout_marginTop="5dp"
    />
</LinearLayout>
