<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TableLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="5dp"
        >

        <!-- Row 1 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_code"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/categoryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 2 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_code"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/groupCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 3 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_amount_"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/expectedAmountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="14dp"
                android:textColor="@color/dark_green" />
        </TableRow>

        <!-- Row 4 -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_date"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/expectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_green" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/dltLineBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_delete_forever_24"
        android:layout_gravity="center"
        />
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_green"
        android:layout_marginVertical="5dp"
        />
</LinearLayout>